--- a/templates/main.html
+++ b/templates/main.html
@@ -13,22 +13,18 @@
     <center> <h3>Map News</h3> </center>
     <!--The div element for the map -->
     <div id="map"></div>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
     <script>
 // Initialize and add the map
 function initMap() {
-  // The location of Uluru
-    $.get('get_values/',  function (data, status) {
-            console.log(`${data}`)
-    })
-  var uluru = {'lat': 51.50072919999999, 'lng': -0.1246254};
-
+    console.log("ere");
+    var uluru = {'lat': 51.50072919999999, 'lng': -0.1246254};
+    var f = {{ f }};
+    console.log("ere2");
   // The map, centered at Uluru
   var map = new google.maps.Map(
-      document.getElementById('map'), {zoom: 4, center: uluru});
+      document.getElementById('map'), {zoom: 4, center: f});
   // The marker, positioned at Uluru
-  var marker = new google.maps.Marker({position: uluru, map: map});
+  var marker = new google.maps.Marker({position: f, map: map});
 }
 
     </script>
