--- a/templates/main.html
+++ b/templates/main.html
@@ -13,17 +13,28 @@
     <center> <h3>Map News</h3> </center>
     <!--The div element for the map -->
     <div id="map"></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script>
 // Initialize and add the map
 function initMap() {
-    var location = {{ location|safe }};
-  var map = new google.maps.Map(
-      document.getElementById('map'), {zoom: 2, center: location[0]});
-  // The marker, positioned at Uluru
+   console.log("ere");
+   var uluru = {'lat': 51.50072919999999, 'lng': -0.1246254};
+   $.ajax({type:'GET',
+           url:'get_values/',
+           success:function (data) {
+                var data1 = JSON.parse(data);
+                loc=data1['location'];
+                setMarkers(loc)
+           }
+   });
+}
 
-    location.forEach(function (item) {
-        new google.maps.Marker({position: item, map: map});
-    })
+function setMarkers(uluru) {
+  var map = new google.maps.Map(
+     document.getElementById('map'), {zoom: 2, center: uluru[0]});
+     uluru.forEach(function (item) {
+      new google.maps.Marker({position: item, map: map});
+  })
 }
 
     </script>
